--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="http://localhost:4000/about/" />
 <meta property="og:site_name" content="Paolo Facchinetti’s website" />
 <script type="application/ld+json">
-{"@type":"WebSite","headline":"About","url":"http://localhost:4000/about/","name":"Paolo Facchinetti’s website","description":"Personal blog. I talk about open source software, trading and cryptocurrencies.","@context":"https://schema.org"}</script>
+{"@type":"WebSite","url":"http://localhost:4000/about/","headline":"About","name":"Paolo Facchinetti’s website","description":"Personal blog. I talk about open source software, trading and cryptocurrencies.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Paolo Facchinetti's website" /></head>
 <body><header class="site-header" role="banner">
