--- a/cv/index.html
+++ b/cv/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="http://localhost:4000/cv/" />
 <meta property="og:site_name" content="Paolo Facchinetti’s website" />
 <script type="application/ld+json">
-{"@type":"WebPage","headline":"Curriculum Vitae","url":"http://localhost:4000/cv/","description":"Personal blog. I talk about open source software, trading and cryptocurrencies.","@context":"https://schema.org"}</script>
+{"@type":"WebPage","url":"http://localhost:4000/cv/","headline":"Curriculum Vitae","description":"Personal blog. I talk about open source software, trading and cryptocurrencies.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Paolo Facchinetti's website" /></head>
 <body><header class="site-header" role="banner">
