upgrade credentials & first post draft

--- a/about/index.html
+++ b/about/index.html
@@ -43,14 +43,14 @@
     <p>Hello World, I’m Paolo Facchinetti, a software developer and cryptocurrency trader.</p>
 
 <p>I’m passionate about cloud and Web3 Technologies, and try to keep up to date with the latest improvements in these fields.
-I first approached the programming world when I was 12 with C++, and ever since I’ve always tried to learn new and emergent languages and technologies.</p>
-
-<p>In 2017 a friend of mine introduced me to Bitcoin and cryptocurrencies. 
+In 2017 a friend of mine introduced me to Bitcoin and cryptocurrencies. 
 Decentralization is a concept that is extremely relevant to the modern world and that I find extremely fascinating.</p>
+
+<p>I’m also a prog rock fan and in my free time I love to read and play games.</p>
 
 <p>In this blog I will talk about my experiences and key takeaways about these fields.</p>
 
-<p>If you want to contact me feel free to do so by through a direct message on my <a href="https://twitter.com/shakiXBT">Twitter</a></p>
+<p>If you want to contact me feel free to do so on my <a href="mailto:paolo.facchinetti.ipad@gmail.com">Email</a></p>
 
   </div>
 
@@ -67,10 +67,10 @@ Decentralization is a concept that is extremely relevant to the modern world and
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
-          <li class="p-name">Paolo Facchinetti&#39;s website</li></ul>
+          <li class="p-name">Paolo Facchinetti&#39;s website</li><li><a class="u-email" href="mailto:paolo.facchinetti.ipad@gmail.com">paolo.facchinetti.ipad@gmail.com</a></li></ul>
       </div>
 
-      <div class="footer-col footer-col-2"><ul class="social-media-list"><li><a href="https://github.com/paolofacchinetti"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg> <span class="username">paolofacchinetti</span></a></li><li><a href="https://www.twitter.com/shakiXBT"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#twitter"></use></svg> <span class="username">shakiXBT</span></a></li></ul>
+      <div class="footer-col footer-col-2"><ul class="social-media-list"><li><a href="https://github.com/paolofacchinetti"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg> <span class="username">paolofacchinetti</span></a></li></ul>
 </div>
 
       <div class="footer-col footer-col-3">
