first release of defi bleeding edge article

--- a/cv/index.html
+++ b/cv/index.html
@@ -46,7 +46,7 @@
 
 <h3 id="idenapoll"><a href="https://github.com/paolofacchinetti/IdenaPoll">IdenaPoll</a></h3>
 
-<p><em>Angular CLI, NgRx, ExpressJS, JSON Server</em></p>
+<p><em>Angular CLI, NgRx, ExpressJS, ChartJS, JSON Server</em></p>
 
 <p>Polling website built for Idena blockchain identities, that guarantees the uniqueness of each vote with sybil-resistant polls.</p>
 
