completed defi blog post

--- a/crypto/defi-bleeding-edge.html
+++ b/crypto/defi-bleeding-edge.html
@@ -64,7 +64,7 @@ The DeFi ecosystem is made of dozens of different dApps that share the objecting
 <p>I’ll let the numbers do the talk:</p>
 <ul>
   <li>According to <a href="https://www.investopedia.com/personal-finance/banks-pay-highest-interest-rates-savings-accounts/">Investopedia</a>, as of September 2020, the highest bank yearly interest rates are around 1.00% to 1.10%</li>
-  <li>Currently, Aave offers</li>
+  <li>Currently, Aave offers around <a href="https://app.aave.com/home">12% yearly returns</a> on the stablecoin DAI.</li>
 </ul>
 
 <h1 id="the-bleeding-edge">The Bleeding Edge</h1>
@@ -88,10 +88,14 @@ Like all bleeding edge technologies, DeFi consists of experimental tech that has
 
 <p>For example, last June the DeFi protocol Balancer was <a href="https://cointelegraph.com/news/defi-protocol-balancer-hacked-through-exploit-it-seemingly-knew-about">hacked</a> for over <strong>$500.000</strong> in cryptocurrencies.</p>
 
-<p>But this is what it means to be on the bleeding edge.<br />
+<p>But this is the risk that it takes to be on the bleeding edge.<br />
 Venture capitals like <a href="https://www.threearrowscap.com/">Three Arrows Capital</a> and single investors that have decided to speculate on Decentralized Finance have decided to face these risks, and have experienced tremendous returns in the past year.</p>
 
 <p>For instance, the Aave token has experienced a rise in its market price of an outstanding <strong>4000%</strong> in the past year.</p>
+
+<h1 id="the-defi-vips">The DeFi VIPs</h1>
+
+<p>To end this blog post, if you’re interested in learning more about DeFi, I highly suggest watching the <a href="https://www.youtube.com/watch?v=VT0enNGV78s&amp;feature=youtu.be">DeFi Roundtable from Smartcon 2020</a> to see what the DeFi industry leaders think of the current state of Decentralized Finance.</p>
 
   </div><a class="u-url" href="/crypto/defi-bleeding-edge" hidden></a>
 </article>
