--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Personal blog. I talk about open source software, trading and cryptocurrencies." />
 <meta property="og:description" content="Personal blog. I talk about open source software, trading and cryptocurrencies." />
-<link rel="canonical" href="http://localhost:4000/" />
-<meta property="og:url" content="http://localhost:4000/" />
+<link rel="canonical" href="/" />
+<meta property="og:url" content="/" />
 <meta property="og:site_name" content="Paolo Facchinetti’s website" />
 <script type="application/ld+json">
-{"@type":"WebSite","url":"http://localhost:4000/","headline":"Paolo Facchinetti’s website","name":"Paolo Facchinetti’s website","description":"Personal blog. I talk about open source software, trading and cryptocurrencies.","@context":"https://schema.org"}</script>
+{"@type":"WebSite","url":"/","headline":"Paolo Facchinetti’s website","name":"Paolo Facchinetti’s website","description":"Personal blog. I talk about open source software, trading and cryptocurrencies.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Paolo Facchinetti's website" /></head>
+<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="/feed.xml" title="Paolo Facchinetti's website" /></head>
 <body><header class="site-header" role="banner">
 
   <div class="wrapper"><a class="site-title" rel="author" href="/">Paolo Facchinetti&#39;s website</a><nav class="site-nav">
