update w/ NFT post

--- a/about/index.html
+++ b/about/index.html
@@ -9,13 +9,13 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Personal blog. I talk about open source software, trading and cryptocurrencies." />
 <meta property="og:description" content="Personal blog. I talk about open source software, trading and cryptocurrencies." />
-<link rel="canonical" href="/about/" />
-<meta property="og:url" content="/about/" />
+<link rel="canonical" href="http://localhost:4000/about/" />
+<meta property="og:url" content="http://localhost:4000/about/" />
 <meta property="og:site_name" content="Paolo Facchinetti’s website" />
 <script type="application/ld+json">
-{"@type":"WebSite","url":"/about/","headline":"About","name":"Paolo Facchinetti’s website","description":"Personal blog. I talk about open source software, trading and cryptocurrencies.","@context":"https://schema.org"}</script>
+{"@type":"WebSite","url":"http://localhost:4000/about/","headline":"About","description":"Personal blog. I talk about open source software, trading and cryptocurrencies.","name":"Paolo Facchinetti’s website","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="/feed.xml" title="Paolo Facchinetti's website" /></head>
+<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Paolo Facchinetti's website" /></head>
 <body><header class="site-header" role="banner">
 
   <div class="wrapper"><a class="site-title" rel="author" href="/">Paolo Facchinetti&#39;s website</a><nav class="site-nav">
@@ -43,10 +43,10 @@
     <p>Hello World, I’m Paolo Facchinetti, a software developer and cryptocurrency trader.</p>
 
 <p>I’m passionate about cloud and Web3 Technologies, and try to keep up to date with the latest improvements in these fields.
-In 2017 a friend of mine introduced me to Bitcoin and other cryptocurrencies such as Ethereum. 
-Decentralization is a concept that is extremely relevant to the modern world and that I find fascinating.</p>
+In 2017 a friend of mine introduced me to Bitcoin and cryptocurrencies. 
+Decentralization is a concept that is extremely relevant to the modern world and that I find extremely fascinating.</p>
 
-<p>I love prog-rock and post-rock, and in my free time I enjoy reading and playing games.</p>
+<p>I’m also a prog rock fan and in my free time I love to read and play games.</p>
 
 <p>In this blog I will talk about my experiences and key takeaways about these fields.</p>
 
