feat: update CV

--- a/cv/index.html
+++ b/cv/index.html
@@ -9,13 +9,13 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Personal blog. I talk about open source software, trading and cryptocurrencies." />
 <meta property="og:description" content="Personal blog. I talk about open source software, trading and cryptocurrencies." />
-<link rel="canonical" href="http://localhost:4000/cv/" />
-<meta property="og:url" content="http://localhost:4000/cv/" />
+<link rel="canonical" href="/cv/" />
+<meta property="og:url" content="/cv/" />
 <meta property="og:site_name" content="Paolo Facchinetti’s website" />
 <script type="application/ld+json">
-{"@type":"WebPage","url":"http://localhost:4000/cv/","headline":"Curriculum Vitae","description":"Personal blog. I talk about open source software, trading and cryptocurrencies.","@context":"https://schema.org"}</script>
+{"@type":"WebPage","url":"/cv/","headline":"Curriculum Vitae","description":"Personal blog. I talk about open source software, trading and cryptocurrencies.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Paolo Facchinetti's website" /></head>
+<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="/feed.xml" title="Paolo Facchinetti's website" /></head>
 <body><header class="site-header" role="banner">
 
   <div class="wrapper"><a class="site-title" rel="author" href="/">Paolo Facchinetti&#39;s website</a><nav class="site-nav">
@@ -48,20 +48,26 @@
 
 <h2 id="projects">Projects</h2>
 
+<h3 id="ethergovernance---consensys-bootcamp-project"><a href="https://github.com/paolofacchinetti/blockchain-developer-bootcamp-final-project">EtherGovernance - Consensys Bootcamp Project</a></h3>
+
+<p><em>Solidity, Truffle, VueJS, web3.js</em></p>
+
+<p>Ethereum on-chain governance based on Ether, my final project for Consensys’ blockchain developer bootcamp.</p>
+
 <h3 id="idenapoll"><a href="https://github.com/paolofacchinetti/IdenaPoll">IdenaPoll</a></h3>
 
-<p><em>Angular CLI, NgRx, ExpressJS, ChartJS, JSON Server</em></p>
+<p><em>Angular, NgRx, ExpressJS</em></p>
 
 <p>Polling website built for Idena blockchain identities, that guarantees the uniqueness of each vote with sybil-resistant polls.</p>
 
 <h3 id="jacmobile"><a href="https://app.fondazionejobsacademy.org/">JacMobile</a></h3>
 
-<p><em>Angular CLI, NgRx</em></p>
+<p><em>Angular</em></p>
 
 <p>Progressive Web App built out of need that serves as a calendar and exam registry for <a href="https://www.fondazionejobsacademy.org/it/jac/">JobsAcademy</a> students.</p>
 
-<p>&nbsp;</p>
-<hr />
+<h2 id="pp">&lt;p&gt; &lt;/p&gt;</h2>
+
 <p>&nbsp;</p>
 
 <h2 id="programming-experience">Programming experience</h2>
@@ -69,57 +75,29 @@
 <h3 id="languages">Languages</h3>
 
 <ul>
-  <li><strong>Backend:</strong>
-    <ul>
-      <li>Java</li>
-      <li>Go</li>
-      <li>Python</li>
-    </ul>
-  </li>
-  <li><strong>Frontend:</strong>
-    <ul>
-      <li>Javascript</li>
-      <li>Typescript</li>
-    </ul>
-  </li>
-  <li><strong>Markup/Style:</strong>
-    <ul>
-      <li>HTML - CSS - SCSS</li>
-      <li>JSON - YAML - XML</li>
-    </ul>
-  </li>
-</ul>
-
-<h3 id="frameworks">Frameworks</h3>
-
-<ul>
-  <li>Angular</li>
-  <li>Spring</li>
-</ul>
-
-<h3 id="database">Database</h3>
-
-<ul>
-  <li>MySQL</li>
-  <li>JSON Server</li>
+  <li>Go</li>
+  <li>Java</li>
+  <li>NodeJS / JavaScript / TypeScript</li>
+  <li>Solidity</li>
 </ul>
 
 <h3 id="devops">Devops</h3>
 
 <ul>
-  <li>Docker</li>
-  <li>Kubernetes</li>
-  <li>Helm</li>
-  <li>AWS (EKS - EFS - S3 - Lambda - SES - EC2 - IAM - Route53)</li>
-  <li>Prometheus - Grafana</li>
+  <li>Container Orchestration (Kubernetes, K3S, Helm)</li>
+  <li>Containers (Docker)</li>
+  <li>Cloud (AWS, GCP)</li>
+  <li>Monitoring (Prometheus, Grafana)</li>
+  <li>CI/CD (Github Actions, Jenkins, Gitlab CICD)</li>
 </ul>
 
-<h3 id="other">Other</h3>
+<h3 id="web3">Web3</h3>
 
 <ul>
-  <li>Linux</li>
-  <li>Git/Github</li>
-  <li>Maven</li>
+  <li>Solidity</li>
+  <li>Truffle</li>
+  <li>web3.js</li>
+  <li>geth (go-ethereum)</li>
 </ul>
 
   </div>
