--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="/" />
 <meta property="og:site_name" content="Paolo Facchinetti’s website" />
 <script type="application/ld+json">
-{"@type":"WebSite","url":"/","headline":"Paolo Facchinetti’s website","description":"Personal blog. I talk about open source software, trading and cryptocurrencies.","name":"Paolo Facchinetti’s website","@context":"https://schema.org"}</script>
+{"@type":"WebSite","url":"/","name":"Paolo Facchinetti’s website","headline":"Paolo Facchinetti’s website","description":"Personal blog. I talk about open source software, trading and cryptocurrencies.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="/feed.xml" title="Paolo Facchinetti's website" /></head>
 <body><header class="site-header" role="banner">
