--- a/it/404.html
+++ b/it/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="auto">
+<html lang="it" dir="auto">
 
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
 <meta name="keywords" content="">
 <meta name="description" content="Paolo Facchinetti&#39;s website">
 <meta name="author" content="Paolo Facchinetti">
-<link rel="canonical" href="https://paolofacchinetti.it/404.html">
+<link rel="canonical" href="https://paolofacchinetti.it/it/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.bc1149f4a72aa4858d3a9f71462f75e5884ffe8073ea9d6d5761d5663d651e20.css" integrity="sha256-vBFJ9KcqpIWNOp9xRi915YhP/oBz6p1tV2HVZj1lHiA=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://paolofacchinetti.it/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://paolofacchinetti.it/favicon-16x16.png">
@@ -57,7 +57,7 @@
 </noscript><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="Paolo Facchinetti&#39;s website" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://paolofacchinetti.it/404.html" />
+<meta property="og:url" content="https://paolofacchinetti.it/it/404.html" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
@@ -80,7 +80,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://paolofacchinetti.it" accesskey="h" title="Paolo Facchinetti (Alt + H)">Paolo Facchinetti</a>
+            <a href="https://paolofacchinetti.it/it/" accesskey="h" title="Paolo Facchinetti (Alt + H)">Paolo Facchinetti</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -104,20 +104,20 @@
                 </button>
                 <ul class="lang-switch"><li>|</li>
                     <li>
-                        <a href="https://paolofacchinetti.it/it/" title="Italian"
-                            aria-label=":it:">🇮🇹</a>
+                        <a href="https://paolofacchinetti.it/" title="🇺🇸"
+                            aria-label=":us:">🇺🇸</a>
                     </li>
                 </ul>
             </div>
         </div>
         <ul id="menu">
             <li>
-                <a href="https://paolofacchinetti.it/cv" title="Resume">
+                <a href="https://paolofacchinetti.it/it/cv" title="Resume">
                     <span>Resume</span>
                 </a>
             </li>
             <li>
-                <a href="https://paolofacchinetti.it/posts/" title="Blog">
+                <a href="https://paolofacchinetti.it/it/posts/" title="Blog">
                     <span>Blog</span>
                 </a>
             </li>
@@ -151,7 +151,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2022 <a href="https://paolofacchinetti.it">Paolo Facchinetti</a></span>
+    <span>&copy; 2022 <a href="https://paolofacchinetti.it/it/">Paolo Facchinetti</a></span>
 </footer>
 <a href="#top" aria-label="go to top" title="Go to Top (Alt + G)" class="top-link" id="top-link" accesskey="g">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentColor">
