feat: update CV

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://paolofacchinetti.it/cv" title="Resume">
-                    <span>Resume</span>
+                <a href="https://paolofacchinetti.it/cv" title="CV">
+                    <span>CV</span>
                 </a>
             </li>
             <li>
@@ -172,9 +172,9 @@
 </div>
 
         <div class="buttons">
-            <a class="button" href="cv" rel="noopener" title="Resume">
+            <a class="button" href="cv" rel="noopener" title="CV">
                 <span class="button-inner">
-                    Resume
+                    CV
                 </span>
             </a>
             <a class="button" href="posts" rel="noopener" title="Blog">
