--- a/it/404.html
+++ b/it/404.html
@@ -112,8 +112,8 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://paolofacchinetti.it/it/cv" title="Resume">
-                    <span>Resume</span>
+                <a href="https://paolofacchinetti.it/it/cv" title="CV">
+                    <span>CV</span>
                 </a>
             </li>
             <li>
