--- a/search/index.html
+++ b/search/index.html
@@ -164,8 +164,8 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://paolofacchinetti.it/cv" title="Resume">
-                    <span>Resume</span>
+                <a href="https://paolofacchinetti.it/cv" title="CV">
+                    <span>CV</span>
                 </a>
             </li>
             <li>
